--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,3 +7,4 @@ target_include_directories(Timer PUBLIC ${CMAKE_SOURCE_DIR}/include)
 if(DEBUG_MODE)
     target_compile_definitions(Timer PRIVATE DEBUG_MODE)
 endif()
+target_link_libraries(Timer PRIVATE pthread)
